cip-macros/tests/ui/cip_class_missing_id.stderr
error: Missing field `id`
  --> tests/ui/cip_class_missing_id.rs:11:1
   |
11 | #[cip_class(name = "MyClass")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `cip_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `MyClass` in this scope
  --> tests/ui/cip_class_missing_id.rs:15:6
   |
15 | impl MyClass {}
   |      ^^^^^^^ not found in this scope

warning: unused import: `CipClass`
 --> tests/ui/cip_class_missing_id.rs:5:14
  |
5 |     object::{CipClass, CipObject, CipResult},
  |              ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
